--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "lucide-react": "^0.553.0",
+    "pdf-lib": "^1.17.1",
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-loader-spinner": "^8.0.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.9.5",
     "react-toastify": "^11.0.5"
